--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ streamlit==1.13.0
 streamlit_authenticator==0.2.1
 streamlit_option_menu==0.3.2
 streamlit-aggrid==0.3.3
+SQLAlchemy==1.4.41
+sqlalchemy-access==1.1.3
