--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,4 @@ streamlit_authenticator==0.2.1
 streamlit_option_menu==0.3.2
 streamlit-aggrid==0.3.3
 SQLAlchemy==1.4.41
-#sqlalchemy-access==1.1.3
-#pywin==303
-
+sqlalchemy-access==1.1.3
