--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
           "username": "gaabbot",
           "email": "gerald.abbot@gmail.com",
           "name": "Gerald Abbot",
-          "password": "$2b$12$TPyOuXubkF5uN8IfHd0BieL.aVLYyaiE2S0kgCBofCHELoWL3f0RW"
+          "password": "$2b$12$HMNvbDNpMPy45S72IX.x1.2oqBWiivLWhYy5GSVFuzg9WhtcvgC1e"
         },
         "mpabbot": {
           "username": "mpabbot",
